change menu design and fix facebook button design on small phones

--- a/src/pages/auth/login/login.page.scss
+++ b/src/pages/auth/login/login.page.scss
@@ -210,6 +210,7 @@
       font-size: 13px;
       width: 222px;
       height: 29px;
+      padding: 0px 0px;
 
       .icon {
         font-size: 18px;
